# cuda_cmm_cvt

./: .gitignore  BriggsModel19Data.csv  CMakeLists.txt  LICENSE  README.md  RestrictedKohlerCH440.csv  cmm_sim.ipynb  cuda_cmm.cu  fr_examination.ipynb  magnetite_examination.ipynb
